# info-retrieval-agent-poc

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  ingest.py  main.py  pyproject.toml
_bmad-output/: project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-04-15-1730.md
_bmad-output/implementation-artifacts/: 1-1-project-scaffolding.md  1-2-configuration-settings.md  1-3-provider-factory-functions.md  2-1-qdrant-collection-setup.md  2-2-pdf-document-loading.md  3-1-vector-store-index-query-engine.md  qa-accessibility-testing.md  qa-performance-testing.md  qa-security-review.md  qa-test-coverage.md  spec-pmc-article-ingestion.md
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
data/: urls.txt
docs/: api-contracts.md  architecture.md  development-guide.md  index.md  project-overview.md  source-tree-analysis.md
src/api/: app.py  models.py
src/config/: __init__.py  providers.py  settings.py
src/core/: agent.py  ingestion.py  vector_store.py
tests/: test_agent.py  test_agent_sources.py  test_api.py  test_chat_fn.py  test_ingestion.py  test_ingestion_pmc.py  test_providers.py  test_settings.py  test_vector_store.py
tests/accessibility/: conftest.py  test_a11y.py
tests/e2e/: test_ingestion_e2e.py  test_query_e2e.py
tests/playwright/: chat.spec.ts  package-lock.json  package.json  playwright.config.ts
(+2 files in other folders)
